fix layout on small screens

--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,6 @@
+.logo img {
+  max-width: 80%;
+}
 
 div.hero-bullets {
     color: #bbbbbb;
@@ -73,7 +76,7 @@ section:nth-child(even) {
 }
 
 .why-bullets li {
-    margin-top: 3em;
+    margin: 3em 1em 0 0;
 }
 
 .team img {
